feat: add webix SpreadSheet lib

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <title>Title</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+
+  <script src="libs/webix/codebase/webix/webix.js?v=10.2.6" type="text/javascript" charset="utf-8"></script>
+  <script src="libs/webix/codebase/spreadsheet.js?v=10.2.6" type="text/javascript" charset="utf-8"></script>
+
+  <link rel="stylesheet" type="text/css" href="libs/webix/codebase/webix/webix.css?v=10.2.6">
+  <link rel="stylesheet" type="text/css" href="libs/webix/codebase/spreadsheet.css?v=10.2.6">
+
+  <title>Title</title>
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 </html>
